// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoresEntry should render correctly when no ball 1`] = `
<div
  className="col-10"
>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <div
      style={
        Object {
          "borderColor": "#ffffff",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
    >
      .
    </div>
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <div
      style={
        Object {
          "borderColor": "#ffffff",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
    >
      1
    </div>
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <div
      style={
        Object {
          "borderColor": "#ffffff",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
    >
      2
    </div>
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <div
      style={
        Object {
          "borderColor": "#ffffff",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
    >
      3
    </div>
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <div
      style={
        Object {
          "borderColor": "#ffffff",
          "borderRadius": "50%",
          "borderStyle": "solid",
          "borderWidth": "1px",
        }
      }
    >
      4
    </div>
  </button>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    <select
      className="custom-select"
      onChange={[Function]}
      style={
        Object {
          "width": "84px",
        }
      }
      value="other"
    >
      <option>
        other
      </option>
      <option
        value="5"
      >
        5
      </option>
      <option
        value="6"
      >
        6
      </option>
      <option
        value="7"
      >
        7
      </option>
      <option
        value="8"
      >
        8
      </option>
      <option
        value="9"
      >
        9
      </option>
      <option
        value="10"
      >
        10
      </option>
    </select>
    <button
      className="btn btn-danger"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "margin": "2px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 "
        data-icon="check"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`ScoresEntry should render correctly when valid delivery and not showing dot 1`] = `
<div
  className="col-10"
>
  <span
    style={
      Object {
        "display": "inline-block",
        "width": "40px",
      }
    }
  />
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    1
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    2
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    3
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    4
  </button>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    <select
      className="custom-select"
      onChange={[Function]}
      style={
        Object {
          "width": "84px",
        }
      }
      value="other"
    >
      <option>
        other
      </option>
      <option
        value="5"
      >
        5
      </option>
      <option
        value="6"
      >
        6
      </option>
      <option
        value="7"
      >
        7
      </option>
      <option
        value="8"
      >
        8
      </option>
      <option
        value="9"
      >
        9
      </option>
      <option
        value="10"
      >
        10
      </option>
    </select>
    <button
      className="btn btn-success"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "margin": "2px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 "
        data-icon="check"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`ScoresEntry should render correctly when valid delivery and showing dot 1`] = `
<div
  className="col-10"
>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    .
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    1
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    2
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    3
  </button>
  <button
    className="btn btn-success"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    4
  </button>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    <select
      className="custom-select"
      onChange={[Function]}
      style={
        Object {
          "width": "84px",
        }
      }
      value="other"
    >
      <option>
        other
      </option>
      <option
        value="5"
      >
        5
      </option>
      <option
        value="6"
      >
        6
      </option>
      <option
        value="7"
      >
        7
      </option>
      <option
        value="8"
      >
        8
      </option>
      <option
        value="9"
      >
        9
      </option>
      <option
        value="10"
      >
        10
      </option>
    </select>
    <button
      className="btn btn-success"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "margin": "2px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 "
        data-icon="check"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`ScoresEntry should render correctly when wide 1`] = `
<div
  className="col-10"
>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    .
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    1
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    2
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    3
  </button>
  <button
    className="btn btn-danger"
    onClick={[Function]}
    style={
      Object {
        "margin": "2px",
        "minWidth": "36px",
      }
    }
  >
    4
  </button>
  <span
    style={
      Object {
        "whiteSpace": "nowrap",
      }
    }
  >
    <select
      className="custom-select"
      onChange={[Function]}
      style={
        Object {
          "width": "84px",
        }
      }
      value="other"
    >
      <option>
        other
      </option>
      <option
        value="5"
      >
        5
      </option>
      <option
        value="6"
      >
        6
      </option>
      <option
        value="7"
      >
        7
      </option>
      <option
        value="8"
      >
        8
      </option>
      <option
        value="9"
      >
        9
      </option>
      <option
        value="10"
      >
        10
      </option>
    </select>
    <button
      className="btn btn-success"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "margin": "2px",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 "
        data-icon="check"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
  </span>
</div>
`;
